--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,12 @@
 title: Joost Helfers | system³
 email: mail@joosthelfers.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Joost Helfers is a Berlin-based Creative Technologist and 3D Generalist specializing 
+  in developing innovative technical workflows and leveraging emerging technologies &
+  AI for visual creation. His core skills encompass advanced 3D techniques and digital 
+  twin development, which he leverages to support the realization of complex and imaginative 
+  artistic and technical visions. He has collaborated with companies such as INYO Mobility GmbH 
+  and CADFEM International, delivering cutting-edge technical concepts and creative problem-solving.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://joosthelfers.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  joosthel
