--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@
 title: Joost Helfers | system³
 email: mail@joosthelfers.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Joost Helfers is a Berlin-based Creative Technologist and 3D Generalist specializing 
-  in developing innovative technical workflows and leveraging emerging technologies &
-  AI for visual creation. His core skills encompass advanced 3D techniques and digital 
-  twin development, which he leverages to support the realization of complex and imaginative 
-  artistic and technical visions. He has collaborated with companies such as INYO Mobility GmbH 
-  and CADFEM International, delivering cutting-edge technical concepts and creative problem-solving.
+  Based in Berlin, Joost Helfers builds technical solutions that turn ambitious creative visions
+  into reality. Drawing from his architectural background and experience across diverse technical
+  fields, he specializes in multidisciplinary problem-solving - bridging design, engineering, and
+  emerging technologies. His strength lies in technical adaptability and cross-disciplinary understanding,
+  developing custom workflows for projects that exist at the intersection of creative possibility and
+  technical implementation.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://joosthelfers.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  joosthel
