update - changes Google Analytics Tag

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ instagram_username: joosthel
 linkedin_username: joosthel
 
 # Analytics
-google_analytics: G-YE3MN2MSF2
+google_analytics: G-FV9Q5RL89T
 
 # Build settings
 theme: minima
