update - are.na bugfix, manual update

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,8 @@ plugins:
 # their entries' file path in the `include:` list.
 #
 exclude:
-  - ARENA_SETUP_GUIDE.md
+  - README_ARENA.md
+  - update-arena-notes.ps1
   - .sass-cache/
   - .jekyll-cache/
   - gemfiles/
