feat: refine blog section with minimalist left-aligned design

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
+    "next-mdx-remote": "^6.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
